# python-cicd-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yaml
python_iccd_demo/: main.py
terraform/: ec2.tf  outputs.tf  variables.tf
tests/: from_dict_test.py
